[package]
name = "aleo-hasher"
version = "0.1.0"
edition = "2021"
include = [ "Cargo.toml", "src"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snarkvm-console-algorithms = {version="0.16.15",default-features = false}
snarkvm-console-network = {version = "0.16.15",default-features = false,features = ["wasm"]}
snarkvm-console-program = {version="0.16.15",default-features = false}
wasm-bindgen = "0.2.89"
getrandom = { version = "0.2.11", features = ["js"] }
wasm-bindgen-test = "0.3.39"
